Создано с помощью Colaboratory

--- a/38_задача.ipynb
+++ b/38_задача.ipynb
@@ -6,7 +6,7 @@
       "name": "38 задача.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNW+CciCGg763dASOSdi1DL",
+      "authorship_tag": "ABX9TyM49dlzrrgb/tyDSBMi3RHc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -505,7 +505,7 @@
         "plt.xlabel('Координата x', fontsize=10)\n",
         "plt.ylabel('Координата y', fontsize=10)\n",
         "ax = fig.add_subplot(2,1,2, projection='3d')\n",
-        "surf = ax.plot_surface(xx, yy, z_1*0.7, rstride=10, cstride=1, cmap = cm.jet )\n",
+        "surf = ax.plot_surface(xx, yy, u[:,:,-1], rstride=10, cstride=1, cmap = cm.jet )\n",
         "ax.set_zlim(-1, 1)\n",
         "plt.title('Численноее решение при t = 0.05 c:', fontsize=\"x-large\")\n",
         "\n",
